Fix bug due to wrong index, Add a max path length to improve UX, Fix Logo overlap #1269

--- a/visualization/app/codeCharta/codeCharta.component.scss
+++ b/visualization/app/codeCharta/codeCharta.component.scss
@@ -8,7 +8,7 @@ code-charta-component {
 			position: absolute;
 			left: 0;
 			bottom: 30px;
-			z-index: 29;
+			z-index: 1;
 		}
 
 		a,
